# stock-market-sentiment

./: README.md  extra_words.txt  log.txt  main.py  pyproject.toml  sentiment.py  simulation.py  subreddits.txt
Data/: log.txt
StockData/: SPX_2002-01-01_2022-01-01.csv  SPY_2002-01-01_2022-01-01.csv
Tickers/: allowed_tickers.txt  us_symbols.csv
